--- a/requirements.txt
+++ b/requirements.txt
@@ -2,44 +2,11 @@ pandas
 numpy
 matplotlib
 scikit-learn
-seaborn
-jupyterlab
-requests
-flask
-sqlalchemy
-beautifulsoup4
-lxml
-pytest
-tensorflow
-torch
-transformers
-opencv-python
-nltk
-spacy
-plotly
-dash
-fastapi
-uvicorn
-pydantic
-pytest-cov
-black
-isort
-mypy
-pre-commit
-sphinx
-sphinx-rtd-theme
-twine
-wheel
-setuptools
-pytest-mock
-coverage
-tox
-ipython
-jupyter
-notebook
-virtualenv
-pipenv
-xgboost
-lightgbm
-shap
+imblearn
 scipy
+plotly
+seaborn
+xgboost
+imblearn
+tabulate
+shap
